fixed spacing of content

--- a/app/assets/styles/app.scss
+++ b/app/assets/styles/app.scss
@@ -30,3 +30,7 @@ nav .mobile.only.row {
 table.selectable tr:hover {
     cursor: pointer !important;
 }
+
+.content {
+    margin-top: 50px;
+}
